# esp32_wifi

./: .gitignore  README.md
appl/: demo.c  demo.h
core/: CMakeLists.txt  main.c  main.h
core/mcu/: mcu.c  mcu.h
core/rtos/: rtos.c  rtos.h
core/system/: system.c  system.h
doc/: ESP32 - Justin Reina - Confluence.url  Repo - esp32_base - ErisdarDemo - GitHub.url  Repo - esp32_wifi - ErisdarDemo - GitHub.url  esp32_wifi - ErisdarDemo - GitHub.url
doc/esp_base/idf_demos/: bootloader_hooks.lnk  component_manager.lnk  deep_sleep.lnk  fatfs.lnk  light_sleep.lnk  task_watchdog.lnk  unit_test.lnk
doc/esp_idf/: main - ESP32 Build System -  ESP-IDF Programming Guide v5.2.5.url
doc/esp_idf/clangd_bug/: readme.txt
doc/esp_idf/cmake/: CMake lesson Hello-world example using CMake - CodeRefinery.url  cmake example hello workd - Google Search.url
doc/esp_idf/code_dirs/: c++ - How to add source files from another directory in a cmake file_ - Stack Overflow.url  cmakelists add separate directory for source - Google Search.url  subdirectory - Multiple source directories for one executable with CMake - Stack Overflow.url
doc/esp_idf/fieldnames/: readme.txt
doc/esp_idf/icsp/: readme.txt
doc/esp_idf/main/: Application Startup Flow - ESP32 - — ESP-IDF Programming Guide v5.4.1 documentation.url  (+2 more)
doc/style/: driver.c  driver.h  source.c  source.h  style.h
doc/vs_code/: readme.txt
doc/vscode/: Multi-root Workspaces.url
lbr/: CMakeLists.txt  utils.c  utils.h
main/: main.c
proj/: .clangd  .cproject  .project  CMakeLists.txt  esp32_base.code-workspace  esp32_wifi.code-workspace
test/: readme.txt
(+5 files in other folders)
