####################################################################################################
# @brief    lbr\ CMake Description
# @details  IDF Progrmming Guide -> Build system -> component CMakeLists.txt 
####################################################################################################

# Build Config
idf_component_register(
                       SRC_DIRS
                         "."
                       INCLUDE_DIRS
                         "." 
                      )

